--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,31 +2,13 @@
 // into a CSS stylesheet                       |
 // - - - - - - - - - - - - - - - - - - - - - - |
 
-// Base
-
-@import 'base/variables';
-@import 'base/typography';
-@import 'base/base';
-
-// Layout
-
-@import 'layout/layout';
-@import 'layout/header';
-@import 'layout/footer';
-
-// Helpers
-
-@import 'helpers/margins';
-
-//Components
-
-@import 'components/buttons';
-@import 'components/forms';
-@import 'components/links';
-@import 'components/modal';
-@import 'components/tooltip';
+//Common
+@import 'common/base';
+@import 'common/layout';
+@import 'common/profile-avatar';
+@import 'common/sticky-links';
+@import 'common/side-menu';
 
 //Pages
-
 @import 'pages/home';
 
