--- a/src/view/index.html
+++ b/src/view/index.html
@@ -5,13 +5,153 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <title>Meme Generator</title>
 </head>
 
 <body>
+<div class="side-menu">
+	<div class="sticky">
+		<p class="link-item">Hom</p>
+		<p class="link-item">Smwhr</p>
+		<p class="link-item">xD</p>
+	</div>
+</div>
+<div class="container">
+	<div class="grid">
+		<div class="grid-item">
+			<img src="img/img1.jpg">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
 
-  <h1>Hi there</h1>
+		<div class="grid-item">
+			<img src="img/img2.jpg">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
 
+		<div class="grid-item">
+			<img src="img/img3.png">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
+
+				<div class="grid-item">
+			<img src="img/img4.gif">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
+
+		<div class="grid-item">
+			<img src="img/img5.png">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
+
+		<div class="grid-item">
+			<img src="img/img6.jpg">
+			<div class="grid-item__row">
+				<p class="grid-item__points">178 points</p>
+				<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+			</div>
+			<div class="grid-item__row">
+				<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+				<p class="grid-item__time">5h</p>
+			</div>
+		</div>
+	</div>
+
+
+	<!--<div class="row grid">
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="grid-item">
+				<img src="img/img1.jpg">
+				<div class="grid-item__row">
+					<p class="grid-item__points">178 points</p>
+					<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+				</div>
+				<div class="grid-item__row">
+					<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+					<p class="grid-item__time">5h</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="grid-item">
+				<img src="img/img2.jpg">
+				<div class="grid-item__row">
+					<p class="grid-item__points">178 points</p>
+					<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+				</div>
+				<div class="grid-item__row">
+					<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+					<p class="grid-item__time">5h</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-12 col-md-6 col-lg-4">
+			<div class="grid-item">
+				<img src="img/img3.png">
+				<div class="grid-item__row">
+					<p class="grid-item__points">178 points</p>
+					<p class="grid-item__share"><img src="img/icon-share.svg"></p>	
+				</div>
+				<div class="grid-item__row">
+					<div class="grid-item__profile"><div class="profile__image"></div>Marc Williams</div>
+					<p class="grid-item__time">5h</p>
+				</div>
+			</div>
+		</div>-->
+
+
+	</div>
+	<div class="sticky-links">
+		<p class="link-item">Facebook</p>
+		<p class="link-item">Twitter</p>
+		<p class="link-item">Instagram</p>
+	</div>
+</div>
   <script type="text/javascript" src="js/script.min.js"></script>
-
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/…/pop…/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/…/4.…/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
